ProjetCompil/Verif/Test/fail/typeNonCompatible13.cas
program
	A : array [1..14] of boolean;
	B : 1..10;
	C : 1..10;
begin
	C := B / A;
end.
	
